tdf#117670: migration Firebird, deal with multiword column

by changing parsing process a bit

Change-Id: I77c06ba218e9bc0d241dbff10f76860d0ca5ed44